--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "vitest --watch"
   },
   "dependencies": {
+    "antd": "^5.24.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.1"
